--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="https://www.resume.com" target="_blank"><button class="rightnav">Download Resume</button></a>
         </nav>
         <div class="banner">
-            <img class="banner-image" src="assets/group.png" alt="a boy front of laptop" width="240px" height="240px">
+            <img class="banner-image" src="assets/group.png" alt="a boy front of laptop" >
             <div class="banner-content">
                 <h4 class="banner-text">"In the near future, I hope to
                     become a Developer."
@@ -74,7 +74,7 @@
 
             <div class="ins-video">
                 
-                <iframe width="250" height="150" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=F1CSWNey4xlyk8Ih" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE?si=F1CSWNey4xlyk8Ih" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             </div>
         </div>
